Use linux-signed instead unsigned linux kernel
bzr-revno: 382.1.1

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -52,29 +52,29 @@ releases:
  - version: "17.10"
    release: artful
    kernels:
-    - [artful,     amd64,    ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
-    - [artful,     amd64,    ga-17.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_a]
+    - [artful,     amd64,    ga-17.10,        generic,     linux-signed-generic,                        *sa_hwe_a]
+    - [artful,     amd64,    ga-17.10,        lowlatency,  linux-signed-image-lowlatency,               *sa_hwe_a]
     - [artful,     arm64,    ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
     - [artful,     arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [artful,     arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
     - [artful,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
     - [artful,     armhf,    ga-17.10,        generic,     linux-generic,                        *arm_hwe_a]
-    - [artful,     i386,     ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
-    - [artful,     i386,     ga-17.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_a]
+    - [artful,     i386,     ga-17.10,        generic,     linux-signed-generic,                        *sa_hwe_a]
+    - [artful,     i386,     ga-17.10,        lowlatency,  linux-signed-image-lowlatency,               *sa_hwe_a]
     - [artful,     ppc64el,  ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
     - [artful,     s390x,    ga-17.10,        generic,     linux-generic,                        *sa_hwe_a]
  - version: "17.04"
    release: zesty
    kernels:
-    - [zesty,      amd64,    ga-17.04,        generic,     linux-generic,                        *sa_hwe_z]
-    - [zesty,      amd64,    ga-17.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_z]
+    - [zesty,      amd64,    ga-17.04,        generic,     linux-signed-generic,                        *sa_hwe_z]
+    - [zesty,      amd64,    ga-17.04,        lowlatency,  linux-signed-image-lowlatency,               *sa_hwe_z]
     - [zesty,      arm64,    ga-17.04,        generic,     linux-generic,                        *sa_hwe_z]
     - [zesty,      arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
     - [zesty,      arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
     - [zesty,      armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
     - [zesty,      armhf,    ga-17.04,        generic,     linux-generic,                        *arm_hwe_z]
-    - [zesty,      i386,     ga-17.04,        generic,     linux-generic,                        *sa_hwe_z]
-    - [zesty,      i386,     ga-17.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_z]
+    - [zesty,      i386,     ga-17.04,        generic,     linux-signed-generic,                        *sa_hwe_z]
+    - [zesty,      i386,     ga-17.04,        lowlatency,  linux-signed-image-lowlatency,               *sa_hwe_z]
     - [zesty,      ppc64el,  ga-17.04,        generic,     linux-generic,                        *sa_hwe_z]
     - [zesty,      s390x,    ga-17.04,        generic,     linux-generic,                        *sa_hwe_z]
  - version: "16.10"
@@ -94,12 +94,12 @@ releases:
  - version: "16.04"
    release: xenial
    kernels:
-    - [xenial,     amd64,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     amd64,    ga-16.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04,       lowlatency,  linux-lowlatency-hwe-16.04,           *sa_hwe_x]
-    - [xenial,     amd64,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
-    - [xenial,     amd64,    hwe-16.04-edge,  lowlatency,  linux-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
+    - [xenial,     amd64,    ga-16.04,        generic,     linux-signed-generic,                        *sa_hwe_x]
+    - [xenial,     amd64,    ga-16.04,        lowlatency,  linux-signed-lowlatency,                     *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04,       generic,     linux-signed-generic-hwe-16.04,              *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04,       lowlatency,  linux-signed-lowlatency-hwe-16.04,           *sa_hwe_x]
+    - [xenial,     amd64,    hwe-16.04-edge,  generic,     linux-signed-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
+    - [xenial,     amd64,    hwe-16.04-edge,  lowlatency,  linux-signed-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
     - [xenial,     arm64,    ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     arm64,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
     - [xenial,     arm64,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
@@ -109,12 +109,12 @@ releases:
     - [xenial,     armhf,    ga-16.04,        generic,     linux-generic,                        *arm_hwe_x]
     - [xenial,     armhf,    hwe-16.04,       generic,     linux-generic-hwe-16.04,              *arm_hwe_x]
     - [xenial,     armhf,    hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *arm_hwe_x_edge]
-    - [xenial,     i386,     ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
-    - [xenial,     i386,     ga-16.04,        lowlatency,  linux-lowlatency,                     *sa_hwe_x]
-    - [xenial,     i386,     hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
-    - [xenial,     i386,     hwe-16.04,       lowlatency,  linux-lowlatency-hwe-16.04,           *sa_hwe_x]
-    - [xenial,     i386,     hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
-    - [xenial,     i386,     hwe-16.04-edge,  lowlatency,  linux-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
+    - [xenial,     i386,     ga-16.04,        generic,     linux-signed-generic,                        *sa_hwe_x]
+    - [xenial,     i386,     ga-16.04,        lowlatency,  linux-signed-lowlatency,                     *sa_hwe_x]
+    - [xenial,     i386,     hwe-16.04,       generic,     linux-signed-generic-hwe-16.04,              *sa_hwe_x]
+    - [xenial,     i386,     hwe-16.04,       lowlatency,  linux-signed-lowlatency-hwe-16.04,           *sa_hwe_x]
+    - [xenial,     i386,     hwe-16.04-edge,  generic,     linux-signed-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
+    - [xenial,     i386,     hwe-16.04-edge,  lowlatency,  linux-signed-lowlatency-hwe-16.04-edge,      *sa_hwe_x_edge]
     - [xenial,     ppc64el,  ga-16.04,        generic,     linux-generic,                        *sa_hwe_x]
     - [xenial,     ppc64el,  hwe-16.04,       generic,     linux-generic-hwe-16.04,              *sa_hwe_x]
     - [xenial,     ppc64el,  hwe-16.04-edge,  generic,     linux-generic-hwe-16.04-edge,         *sa_hwe_x_edge]
@@ -127,33 +127,33 @@ releases:
    kernels:
     - [trusty,  armhf,   hwe-t,     generic,    linux-generic,                     *arm_hwe_t]
     - [trusty,  armhf,   *glpae,    *glpae,     linux-generic-lpae,                [*glpae]]
-    - [trusty,  i386,    hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
-    - [trusty,  amd64,   hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
+    - [trusty,  i386,    hwe-t,     generic,    linux-signed-generic,                     *sa_hwe_t]
+    - [trusty,  amd64,   hwe-t,     generic,    linux-signed-generic,                     *sa_hwe_t]
     - [trusty,  ppc64el, hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
     - [trusty,  arm64,   hwe-t,     generic,    linux-generic,                     *sa_hwe_t]
     - [trusty,  arm64,   *xguboot,  generic,    linux-generic,                     [*xguboot], *kh-xgene]
     - [trusty,  arm64,   *mustang,  generic,    linux-generic,                     [*mustang], *kh-mustang]
-    - [utopic,  amd64,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [utopic,  amd64,   hwe-u,     generic,    linux-signed-generic-lts-utopic,          *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
     - [utopic,  armhf,   hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
-    - [utopic,  i386,    hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
+    - [utopic,  i386,    hwe-u,     generic,    linux-signed-generic-lts-utopic,          *sa_hwe_u]
     - [utopic,  ppc64el, hwe-u,     generic,    linux-generic-lts-utopic,          *sa_hwe_u]
-    - [vivid,   amd64,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [vivid,   amd64,   hwe-v,     generic,    linux-signed-generic-lts-vivid,           *sa_hwe_v]
     - [vivid,   arm64,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
     - [vivid,   armhf,   hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
-    - [vivid,   i386,    hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
+    - [vivid,   i386,    hwe-v,     generic,    linux-signed-generic-lts-vivid,           *sa_hwe_v]
     - [vivid,   ppc64el, hwe-v,     generic,    linux-generic-lts-vivid,           *sa_hwe_v]
-    - [wily,    amd64,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [wily,    amd64,   hwe-w,     generic,    linux-signed-generic-lts-wily,            *sa_hwe_w]
     - [wily,    arm64,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
     - [wily,    armhf,   hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
-    - [wily,    i386,    hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
+    - [wily,    i386,    hwe-w,     generic,    linux-signed-generic-lts-wily,            *sa_hwe_w]
     - [wily,    ppc64el, hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
-    - [xenial,  amd64,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
-    - [xenial,  amd64,   hwe-x,     lowlatency, linux-lowlatency,                  *sa_hwe_x_legacy]
+    - [xenial,  amd64,   hwe-x,     generic,    linux-signed-generic-lts-xenial,          *sa_hwe_x_legacy]
+    - [xenial,  amd64,   hwe-x,     lowlatency, linux-signed-lowlatency,                  *sa_hwe_x_legacy]
     - [xenial,  arm64,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
     - [xenial,  armhf,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
-    - [xenial,  i386,    hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
-    - [xenial,  i386,    hwe-x,     lowlatency, linux-lowlatency,                  *sa_hwe_x_legacy]
+    - [xenial,  i386,    hwe-x,     generic,    linux-signed-generic-lts-xenial,          *sa_hwe_x_legacy]
+    - [xenial,  i386,    hwe-x,     lowlatency, linux-signed-lowlatency,                  *sa_hwe_x_legacy]
     - [xenial,  ppc64el, hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
  - version: "12.04"
    release: precise
