--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -45,25 +45,25 @@ releases:
  - version: "17.10"
    release: artful
    kernels:
-    - [artful,  amd64,   hwe-a,    generic,   linux-generic,            *sa_hwe_a]
+    - [artful,  amd64,   hwe-a,    generic,   linux-signed-generic,            *sa_hwe_a]
     - [artful,  arm64,   hwe-a,    generic,   linux-generic,            *sa_hwe_a]
     - [artful,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [artful,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
     - [artful,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
     - [artful,  armhf,   hwe-a,    generic,   linux-generic,            *arm_hwe_a]
-    - [artful,  i386,    hwe-a,    generic,   linux-generic,            *sa_hwe_a]
+    - [artful,  i386,    hwe-a,    generic,   linux-signed-generic,            *sa_hwe_a]
     - [artful,  ppc64el, hwe-a,    generic,   linux-generic,            *sa_hwe_a]
     - [artful,  s390x,   hwe-a,    generic,   linux-generic,            *sa_hwe_a]
  - version: "17.04"
    release: zesty
    kernels:
-    - [zesty,  amd64,   hwe-z,    generic,   linux-generic,            *sa_hwe_z]
+    - [zesty,  amd64,   hwe-z,    generic,   linux-signed-generic,            *sa_hwe_z]
     - [zesty,  arm64,   hwe-z,    generic,   linux-generic,            *sa_hwe_z]
     - [zesty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [zesty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
     - [zesty,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
     - [zesty,  armhf,   hwe-z,    generic,   linux-generic,            *arm_hwe_z]
-    - [zesty,  i386,    hwe-z,    generic,   linux-generic,            *sa_hwe_z]
+    - [zesty,  i386,    hwe-z,    generic,   linux-signed-generic,            *sa_hwe_z]
     - [zesty,  ppc64el, hwe-z,    generic,   linux-generic,            *sa_hwe_z]
     - [zesty,  s390x,   hwe-z,    generic,   linux-generic,            *sa_hwe_z]
  - version: "16.10"
@@ -81,13 +81,13 @@ releases:
  - version: "16.04"
    release: xenial
    kernels:
-    - [xenial,  amd64,   hwe-x,    generic,   linux-generic,            *sa_hwe_x]
+    - [xenial,  amd64,   hwe-x,    generic,   linux-signedgeneric,            *sa_hwe_x]
     - [xenial,  arm64,   hwe-x,    generic,   linux-generic,            *sa_hwe_x]
     - [xenial,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [xenial,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
     - [xenial,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
     - [xenial,  armhf,   hwe-x,    generic,   linux-generic,            *arm_hwe_x]
-    - [xenial,  i386,    hwe-x,    generic,   linux-generic,            *sa_hwe_x]
+    - [xenial,  i386,    hwe-x,    generic,   linux-signed-generic,            *sa_hwe_x]
     - [xenial,  ppc64el, hwe-x,    generic,   linux-generic,            *sa_hwe_x]
     - [xenial,  s390x,   hwe-x,    generic,   linux-generic,            *sa_hwe_x]
  - version: "15.10"
@@ -132,31 +132,31 @@ releases:
    kernels:
     - [trusty,  armhf,   hwe-t,    generic,   linux-generic,            *arm_hwe_t]
     - [trusty,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
-    - [trusty,  i386,    hwe-t,    generic,   linux-generic,            *sa_hwe_t]
-    - [trusty,  amd64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
+    - [trusty,  i386,    hwe-t,    generic,   linux-signed-generic,            *sa_hwe_t]
+    - [trusty,  amd64,   hwe-t,    generic,   linux-signed-generic,            *sa_hwe_t]
     - [trusty,  ppc64el, hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  arm64,   hwe-t,    generic,   linux-generic,            *sa_hwe_t]
     - [trusty,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
     - [trusty,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
-    - [utopic,  amd64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
+    - [utopic,  amd64,   hwe-u,    generic,  linux-signed-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  arm64,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  armhf,   hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [utopic,  i386,    hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
+    - [utopic,  i386,    hwe-u,    generic,  linux-signed-generic-lts-utopic,  *sa_hwe_u]
     - [utopic,  ppc64el, hwe-u,    generic,  linux-generic-lts-utopic,  *sa_hwe_u]
-    - [vivid,   amd64,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
+    - [vivid,   amd64,   hwe-v,    generic,  linux-signed-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   arm64,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   armhf,   hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [vivid,   i386,    hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
+    - [vivid,   i386,    hwe-v,    generic,  linux-signed-generic-lts-vivid,   *sa_hwe_v]
     - [vivid,   ppc64el, hwe-v,    generic,  linux-generic-lts-vivid,   *sa_hwe_v]
-    - [wily,    amd64,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
+    - [wily,    amd64,   hwe-w,    generic,  linux-signed-generic-lts-wily,    *sa_hwe_w]
     - [wily,    arm64,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
     - [wily,    armhf,   hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [wily,    i386,    hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
+    - [wily,    i386,    hwe-w,    generic,  linux-signed-generic-lts-wily,    *sa_hwe_w]
     - [wily,    ppc64el, hwe-w,    generic,  linux-generic-lts-wily,    *sa_hwe_w]
-    - [xenial,  amd64,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
+    - [xenial,  amd64,   hwe-x,    generic,  linux-signed-generic-lts-xenial,  *sa_hwe_x]
     - [xenial,  arm64,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
     - [xenial,  armhf,   hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
-    - [xenial,  i386,    hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
+    - [xenial,  i386,    hwe-x,    generic,  linux-signed-generic-lts-xenial,  *sa_hwe_x]
     - [xenial,  ppc64el, hwe-x,    generic,  linux-generic-lts-xenial,  *sa_hwe_x]
  - version: "13.10"
    builtin_kernel: linux-generic
