--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -149,7 +149,7 @@ releases:
     - [wily,    i386,    hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
     - [wily,    ppc64el, hwe-w,     generic,    linux-generic-lts-wily,            *sa_hwe_w]
     - [xenial,  amd64,   hwe-x,     generic,    linux-signed-generic-lts-xenial,   *sa_hwe_x_legacy]
-    - [xenial,  amd64,   hwe-x,     lowlatency, linux-signed-lowlatency,           *sa_hwe_x_legacy]
+    - [xenial,  amd64,   hwe-x,     lowlatency, linux-signed-lowlatency-lts-xenial, *sa_hwe_x_legacy]
     - [xenial,  arm64,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
     - [xenial,  armhf,   hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
     - [xenial,  i386,    hwe-x,     generic,    linux-generic-lts-xenial,          *sa_hwe_x_legacy]
