precise: remove reference to non-existing package linux-signed-generic.
Apparently there was no signed generic kernel for precise GA.
Specifically, there is no:
  linux-signed-generic
but there *is*:
  linux-signed-generic-lts-quantal
  linux-signed-generic-lts-raring
  linux-signed-generic-lts-saucy
  linux-signed-generic-lts-trusty

bzr-revno: 387.1.1

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -176,7 +176,7 @@ releases:
    builtin_kernel: {armhf: linux-highbank, default: 'linux-generic'}
    kernels:
     - [precise, i386,    hwe-p,    generic,  linux-generic,             *sa_hwe_p]
-    - [precise, amd64,   hwe-p,    generic,  linux-signed-generic,      *sa_hwe_p]
+    - [precise, amd64,   hwe-p,    generic,  linux-generic,             *sa_hwe_p]
     - [precise, armhf,   highbank, highbank, linux-highbank,            [highbank]]
     - [quantal, i386,    hwe-q,    generic,  linux-generic-lts-quantal, *sa_hwe_q]
     - [quantal, amd64,   hwe-q,    generic,  linux-signed-generic-lts-quantal, *sa_hwe_q]
