add cosmic / 18.10 / Cosmic.
This just updates conf/ to know about Cosmic.

in meph-v3.yaml i've used the anchor name hwe_cc rather than hwe_c 
as is becoming the standard to refer to the second time through the
ubuntu alphabet.  In meph-v3.yaml, these are *only* anchors, they
have no affect on the published data.

I've left the single letter in meph-v2.yaml as they those anchors
contain things like 'hwe-z' and 'hwe-b', so I found it more straight
forward to keep those anchor names.  We would expect meph-v2 to be
out of use by the time we get back to hwe-p.

bzr-revno: 396.1.1

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -25,6 +25,7 @@ subarches:
  - &sa_hwe_z  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z]
  - &sa_hwe_a  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a]
  - &sa_hwe_b  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b]
+ - &sa_hwe_c  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c]
  - &arm_hwe_t [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -34,6 +35,7 @@ subarches:
  - &arm_hwe_z [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z]
  - &arm_hwe_a [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a]
  - &arm_hwe_b [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b]
+ - &arm_hwe_c [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c]
 
 misc:
  - &glpae generic-lpae
@@ -44,6 +46,18 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "18.10"
+   release: cosmic
+   kernels:
+    - [bionic,  amd64,   hwe-cc,    generic,   linux-signed-generic,     *sa_hwe_c]
+    - [bionic,  arm64,   hwe-cc,    generic,   linux-generic,            *sa_hwe_c]
+    - [bionic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
+    - [bionic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [bionic,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [bionic,  armhf,   hwe-cc,    generic,   linux-generic,            *arm_hwe_c]
+    - [bionic,  i386,    hwe-cc,    generic,   linux-generic,            *sa_hwe_c]
+    - [bionic,  ppc64el, hwe-cc,    generic,   linux-generic,            *sa_hwe_c]
+    - [bionic,  s390x,   hwe-cc,    generic,   linux-generic,            *sa_hwe_c]
  - version: "18.04"
    release: bionic
    kernels:
