meph-v2.yaml: fix previous commit that added v2 kernels as 'bionic'.
Fix this typo that resulted in errors mining d-i cosmic kernels
when building v2 image streams.  Not surprisingly, cosmic dists do
not have 'bionic' entries anywhere.

After the change, the following works:
 ./bin/netboot-mirror --dry-run -vvv --releases=cosmic out.d

bzr-revno: 398

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -49,15 +49,15 @@ releases:
  - version: "18.10"
    release: cosmic
    kernels:
-    - [bionic,  amd64,   hwe-c,    generic,   linux-signed-generic,     *sa_hwe_c]
-    - [bionic,  arm64,   hwe-c,    generic,   linux-generic,            *sa_hwe_c]
-    - [bionic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
-    - [bionic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
-    - [bionic,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
-    - [bionic,  armhf,   hwe-c,    generic,   linux-generic,            *arm_hwe_c]
-    - [bionic,  i386,    hwe-c,    generic,   linux-generic,            *sa_hwe_c]
-    - [bionic,  ppc64el, hwe-c,    generic,   linux-generic,            *sa_hwe_c]
-    - [bionic,  s390x,   hwe-c,    generic,   linux-generic,            *sa_hwe_c]
+    - [cosmic,  amd64,   hwe-c,    generic,   linux-signed-generic,     *sa_hwe_c]
+    - [cosmic,  arm64,   hwe-c,    generic,   linux-generic,            *sa_hwe_c]
+    - [cosmic,  arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
+    - [cosmic,  arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [cosmic,  armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [cosmic,  armhf,   hwe-c,    generic,   linux-generic,            *arm_hwe_c]
+    - [cosmic,  i386,    hwe-c,    generic,   linux-generic,            *sa_hwe_c]
+    - [cosmic,  ppc64el, hwe-c,    generic,   linux-generic,            *sa_hwe_c]
+    - [cosmic,  s390x,   hwe-c,    generic,   linux-generic,            *sa_hwe_c]
  - version: "18.04"
    release: bionic
    kernels:
