Adjust to using simplestreams from git instead of bzr.
simplestreams has moved from bzr to git.
Just update references to it's bzr to use git instead.

bzr-revno: 399.1.1

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ recreate = False
 [testenv]
 basepython=python3
 deps =
-     bzr+lp:simplestreams
+     git+https://git.launchpad.net/simplestreams
      pyyaml
      distro_info
 
@@ -18,7 +18,7 @@ setenv =
 # we explicitly list those dependencies here.
 deps =
     pyyaml
-    bzr+lp:simplestreams
+    git+https://git.launchpad.net/simplestreams
 commands = {toxinidir}/bin/meph2-util --help
 
 [testenv:flake8]
