Ship lpxelinux.0 with the PXE bootloader
bzr-revno: 400.1.1

--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -13,6 +13,7 @@ bootloaders:
    os: pxelinux
    files:
     - usr/lib/PXELINUX/pxelinux.0
+    - usr/lib/PXELINUX/lpxelinux.0
     - usr/lib/syslinux/modules/bios/*.c32
  - firmware-platform: uefi
    packages:
