--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -9,7 +9,7 @@ bootloaders:
    arch: i386
    arches: i386,amd64
    archive: http://archive.ubuntu.com/ubuntu
-   release: xenial
+   release: bionic
    os: pxelinux
    files:
     - usr/lib/PXELINUX/pxelinux.0
@@ -22,7 +22,7 @@ bootloaders:
    arch: amd64
    arches: amd64
    archive: http://archive.ubuntu.com/ubuntu
-   release: xenial
+   release: bionic
    os: grub-efi-signed
    files:
     - usr/lib/shim/shimx64.efi.signed, bootx64.efi
@@ -33,7 +33,7 @@ bootloaders:
    arch: arm64
    arches: arm64
    archive: http://ports.ubuntu.com
-   release: xenial
+   release: bionic
    os: grub-efi
    files:
     - usr/lib/grub/arm64-efi/
@@ -54,7 +54,7 @@ bootloaders:
    arch: ppc64el
    arches: ppc64el,ppc64
    archive: http://ports.ubuntu.com
-   release: xenial
+   release: bionic
    os: grub-ieee1275
    files:
     - usr/lib/grub/powerpc-ieee1275/
