--- a/conf/centos.yaml
+++ b/conf/centos.yaml
@@ -32,6 +32,7 @@ versions:
          # Tools needed to allow custom storage to be deployed without
          # accessing the Internet.
          - grub2-efi-x64
+	 - shim-x64
          - efibootmgr
          - dosfstools
          - lvm2
